Cadastro + Login + Autenticação adicionados

--- a/Longevida/src/app/navbar/navbar.component.html
+++ b/Longevida/src/app/navbar/navbar.component.html
@@ -18,7 +18,29 @@ background: linear-gradient(86deg, rgba(37,102,112,1) 0%, rgba(30,66,94,1) 100%)
         </li> 
         <li class="nav-item pl-2 pr-3">
           <a class="nav-link" routerLink='/contato'>Contato</a>
-        </li> 
+        </li>
+
+      </ul>
+    </div>
+
+    <div class="collapse navbar-collapse d-flex justify-content-flex-end" id="navbarSupportedContent2">
+      <ul class="navbar-nav">
+        <div> 
+          <li class="nav-item pl-5 pr-3">
+            <a class="nav-link " routerLink='/login'>Login</a>
+          </li>
+        </div>
+        <div> 
+          <li class="nav-item pl-5 pr-3">
+            <a class="nav-link " routerLink='/cadastro'>Cadastro</a>
+          </li>
+        </div>
+
+        <div> 
+          <li class="nav-item pl-5 pr-3">
+            <a class="nav-link ">Sair</a>
+          </li>
+        </div>
       </ul>
     </div>
   </nav>
