--- a/Longevida/src/app/home/home.component.html
+++ b/Longevida/src/app/home/home.component.html
@@ -76,7 +76,9 @@
                 background: linear-gradient(177deg, rgba(24,58,85,0) 0%, rgba(37,102,112,0) 100%);">
                 <img src="../../assets/img/img1.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text text-light">O projeto longe vida visa ajudar a vida ambiental!</p>
+                  <p class="card-text text-light">O projeto longe vida visa ajudar a vida ambiental!
+                    
+                  </p>
                 </div>
               </div>
             </div>
