--- a/Longevida/src/app/categorias/categorias.component.html
+++ b/Longevida/src/app/categorias/categorias.component.html
@@ -5,19 +5,9 @@
 
     <div class="card-body">
         <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link cat" href="#">CATEGORIA 1</a>
+            <li class="nav-item" *ngFor="let item of listaCategoria | orderBy: key : reverse">
+              <a class="nav-link cat" href="#">{{item.categoria}}</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link cat" href="#">CATEGORIA 2</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link cat" href="#">CATEGORIA 3</a>
-            </li>
-
           </ul>
-  
-      
-  
     </div>
 </div>
