Projeto Longevida | Front-End | Angular

--- a/Longevida/src/app/navbar/navbar.component.html
+++ b/Longevida/src/app/navbar/navbar.component.html
@@ -31,9 +31,9 @@ background: linear-gradient(86deg, rgba(37,102,112,1) 0%, rgba(30,66,94,1) 100%)
            <a class="nav-link " routerLink='/login'>Login</a>
           </li>
         </div>
-        <div *ngIf='auth.btnLogin()'>
+        <div *ngIf='auth.btnSair()'>
           <li class="nav-item pl-5 pr-3">
-            <a class="nav-link " routerLink='/cadastro'>Cadastro</a>
+            <a class="nav-link " routerLink='/cadastro'>Cadastrar Produto</a>
           </li>
          </div>
 
