Projeto Longevida | Front-End | Angular

--- a/Longevida/src/app/home/home.component.html
+++ b/Longevida/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -25,8 +26,10 @@
     </a>
   </div>
   <div class="jumbotron d-flex justify-content-center align-items-center flex-column" style="background-color: white;">
-      
-        <h1 class="display-4 font-weight-bold">CONFIRA NOSSAS CATEGORIAS</h1>
+      <div class="row mb-3">
+        <img src="https://i.imgur.com/BAQPNYU.png" class="d-block w-100" alt="...">
+      </div>
+        <h1 class="display-4 font-weight-bold mt-2">MAIS VISTOS</h1>
         <div class="row row-cols-1 row-cols-sm- row-cols-md-4">
             <div class="col m-5"><div class="card" style="width: 18rem;">
                 <img src="../../assets/img/card1.jpg" class="card-img-top" alt="...">
@@ -55,6 +58,68 @@
            
           </div>
   </div>
+  <div class="jumbotron d-flex justify-content-center align-items-center flex-column" style="background-color: white;">
+      
+    <h1 class="display-4 font-weight-bold">NOVIDADES</h1>
+    <div class="row row-cols-1 row-cols-sm- row-cols-md-4">
+        <div class="col m-5"><div class="card" style="width: 18rem;">
+            <img src="../../assets/img/card1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Ferramentas</h5>
+              <p class="card-text">Está procurando ferramentas? Veja nossos produtos!</p>
+              <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+            </div>
+          </div></div>
+        <div class="col m-5"><div class="card" style="width: 18rem;">
+            <img src="../../assets/img/card2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Sementes</h5>
+              <p class="card-text">Buscando algo para plantar? Veja nossos produtos!</p>
+              <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+            </div>
+          </div></div>
+        <div class="col m-5"><div class="card" style="width: 18rem;">
+            <img src="../../assets/img/card3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Decoração</h5>
+              <p class="card-text">Também temos produtos decorativos! Confira já!</p>
+              <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+            </div>
+          </div></div>
+       
+      </div>
+</div>
+<div class="jumbotron d-flex justify-content-center align-items-center flex-column" style="background-color: white;">
+      
+  <h1 class="display-4 font-weight-bold">PROMOÇÕES</h1>
+  <div class="row row-cols-1 row-cols-sm- row-cols-md-4">
+      <div class="col m-5"><div class="card" style="width: 18rem;">
+          <img src="../../assets/img/card1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Ferramentas</h5>
+            <p class="card-text">Está procurando ferramentas? Veja nossos produtos!</p>
+            <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+          </div>
+        </div></div>
+      <div class="col m-5"><div class="card" style="width: 18rem;">
+          <img src="../../assets/img/card2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sementes</h5>
+            <p class="card-text">Buscando algo para plantar? Veja nossos produtos!</p>
+            <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+          </div>
+        </div></div>
+      <div class="col m-5"><div class="card" style="width: 18rem;">
+          <img src="../../assets/img/card3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Decoração</h5>
+            <p class="card-text">Também temos produtos decorativos! Confira já!</p>
+            <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+          </div>
+        </div></div>
+     
+    </div>
+</div>
        
     <div class="jumbotron d-flex justify-content-center align-items-center flex-column" style="background: rgb(37,102,112);
     background: radial-gradient(circle, rgba(37,102,112,1) 0%, rgba(30,66,94,1) 100%);margin-top: -2%;">
@@ -105,60 +170,4 @@
 
   </div>
 
-     <div class="jumbotron d-flex justify-content-center align-items-center flex-column mt-5 " style="background-color: white;">
-        <div class="w-100 rounded d-flex justify-content-center mb-5" >
-            <h1 class="display-4 font-weight-bold text-dark">QUEM SOMOS?</h1>   
-        </div> 
-      <img src="../../assets/img/quemsomos.jpg" width="1500" height="400" class="img-fluid" alt="Responsive image">     
-     </div> 
-     <div class="jumbotrom m-4 d-flex justify-content-center align-items-center mb-4" style="background-color: white;">
-      <h1 class=" time"> NOSSO TIME DOS SONHOS:</h1>
-    </div>
-     <div class="jumbotron" style="background: rgb(24,58,85);
-     background: radial-gradient(circle, rgba(24,58,85,0.07886904761904767) 38%, rgba(37,102,112,0.5354516806722689) 100%);">
-     <div class="row w-100 p-5">
-       <div class="col-md-2 d-flex flex-column align-items-center text-center">
-        <img src="../../assets/img/foto.jpg" alt="Godoy" width="150px" class="sombra" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
-        <p class="nome">Gustavo Godoy</p>
-        <p class="tech">TECH LEAD</p>
-        <p class="developer">Developer</p>
-      </div>
-       <div class="col-md-2 d-flex flex-column align-items-center text-center">
-        <img src="../../assets/img/ph.jpg" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
-        <p class="nome">Paulo Morais</p>
-        <p class="scrum">SCRUM MASTER</p>
-        <p class="developer">Developer</p>
-      </div>
-       <div class="col-md-2 d-flex flex-column align-items-center text-center">
-        <img src="../../assets/img/gui.jpg" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
-        <p class="nome">Guilherme Cano</p>
-        <p class="developer">Developer</p>
-       </div>
-       <div class="col-md-2 d-flex flex-column align-items-center text-center">
-        <img src="../../assets/img/bia.jpg" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
-        <p class="nome">Beatriz Rodrigues</p>
-        <p class="developer">Developer</p>
-       </div>
-       <div class="col-md-2 d-flex flex-column align-items-center text-center">
-        <img src="../../assets/img/aninha.jpg" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
-        <p class="nome">Ana Eusébio</p>
-        <p class="developer">Developer</p>
-       </div>
-       <div class="col-md-2 d-flex flex-column align-items-center text-center">
-        <img src="../../assets/img/henrique.jpg" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-        box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
-        <p class="nome">Henrique Marcelino</p>
-        <p class="developer">Developer</p>
-       </div>
-     </div></div>
+    
