--- a/Longevida/src/app/contato/contato.component.html
+++ b/Longevida/src/app/contato/contato.component.html
@@ -12,10 +12,8 @@
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, voluptatum iste! Repudiandae, labore rerum distinctio iste at odio animi rem recusandae numquam totam. Suscipit voluptate, ad consequatur magnam dolorum optio.
       </p>
-      <h2 class="text-right">Entre em Contato:</h2>
-      <p class="text-right">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta provident, nostrum non vitae impedit delectus ratione sapiente ad eum, cumque sed voluptatem blanditiis expedita omnis quam tempora quibusdam. Magni, excepturi!
-      </p>
+      
+      
       <div class="d-flex justify-content-end rounded p-2" style="background: rgb(24,58,85);
       background: linear-gradient(86deg, rgba(24,58,85,0) 0%, rgba(37,102,112,1) 100%);">
       <a href=" https://wa.me/5511948400434" class="ml-3" target="_blank" rel="noopener noreferrer"><img src="../../assets/img/wpp.png" width="40px" height="40px" alt="Whatsapp Logo"></a>
@@ -30,6 +28,39 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta provident, nostr
         sBela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001404-100!5e0!3m2!1spt-BR!2sbr!4v1603292419122!5m2!1spt-BR!2sbr"
         width="500" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" onmousemove="mapaZoom()" onmouseout="mapaNormal()" id="mapa"></iframe>
   </div>
+  <div class=" container p-3 mb-5 bg-white rounded">
+    <div class="row mb-5">
+      <div class="col-md-12">
+        <h2 class="text-center">Entre em Contato:</h2>
+      </div>
+    </div>
+
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-6">
+        <form id="formExemplo" data-toggle="validator">
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Qual seu nome?</label>
+            <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Digite seu nome)" type="text" required data-minlength="5">
+          </div>
+
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Qual seu e-mail?</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="exemplo@examplo.com" type="email"
+              data-error="Please inform a valid e-mail." required>
+              <div class="help-block with-errors"></div>
+          </div>
+
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Qual o assunto? </label>
+            <textarea type="text" class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Qual o assunto?  (min. 30 caracteres)" required data-minlength="30"></textarea>
+          </div>
+
+          <div class="form-group d-flex justify-content-center">
+            <button type="submit" class="btn btn-outline w-25">Enviar</button>
+              </div>
+          </form>
+      </div>
+        </div>
+    </div>
 </div>
 </div>
-    
