--- a/Longevida/src/app/navbar/navbar.component.html
+++ b/Longevida/src/app/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background: rgb(37,102,112);
+
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background: rgb(37,102,112);
 background: linear-gradient(86deg, rgba(37,102,112,1) 0%, rgba(30,66,94,1) 100%);">
   <a class="navbar-brand" href="#">
     <img src="../../assets/img/Logo.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
@@ -7,35 +8,42 @@ background: linear-gradient(86deg, rgba(37,102,112,1) 0%, rgba(30,66,94,1) 100%)
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item pl-5 pr-3">
-          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item pl-2 pr-3">
-          <a class="nav-link" routerLink='/produtos'>Produtos</a>
-        </li> 
-        <li class="nav-item pl-2 pr-3">
-          <a class="nav-link" routerLink='/contato'>Contato</a>
-        </li>
+ 
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item pl-5 pr-3">
+            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item pl-2 pr-3">
+            <a class="nav-link" routerLink='/produtos'>Produtos</a>
+          </li> 
+          <li class="nav-item pl-2 pr-3">
+            <a class="nav-link" routerLink='/contato'>Contato</a>
+          </li>
+          <li class="nav-item pl-2 pr-3">
+            <a class="nav-link" routerLink='/empresa'>Quem Somos</a>
+          </li>
+    
+        </ul>
+      </div>
+    
+    
 
-      </ul>
-    </div>
-
   
-    <div class="d-flex justify-content-flex-end" id="navbarSupportedContent">
+    <div class="d-flex justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto ">
+        <div *ngIf='auth.btnLogin()'>
+          <li class="nav-item pl-5 pr-3">
+            <a class="nav-link " routerLink='/cadastro'>Cadastre-se</a>
+          </li>
+         </div>
+
         <div *ngIf='auth.btnLogin()'>
           <li class="nav-item pl-5 pr-3">
            <a class="nav-link " routerLink='/login'>Login</a>
           </li>
         </div>
-        <div *ngIf='auth.btnSair()'>
-          <li class="nav-item pl-5 pr-3">
-            <a class="nav-link " routerLink='/cadastro'>Cadastrar Produto</a>
-          </li>
-         </div>
+        
 
          <div *ngIf='auth.btnSair()'>
           <li class="nav-item pl-5 pr-3">
@@ -44,5 +52,44 @@ background: linear-gradient(86deg, rgba(37,102,112,1) 0%, rgba(30,66,94,1) 100%)
         </div>
       </ul>
     </div>
-
+  
+  
+    
+    
 </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
+
+  <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+    <ul class="navbar-nav mr-auto">
+      
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: rgba(30,66,94,1);" >
+          Categorias
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">CASA</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">DECORAÇÕES</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">100PLASTICOS</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">SEU CORPO SEU TEMPLO</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">ENERGIA SOLAR</a>
+        </div>
+      </li>
+      
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+      <button class="btn btn-outline my-2 my-sm-0" type="submit">Pesquisar</button>
+    </form>
+  </div>
+</nav>
+
+
+
+
+
+  
