--- a/Longevida/src/app/crud-produto/crud-produto.component.html
+++ b/Longevida/src/app/crud-produto/crud-produto.component.html
@@ -5,17 +5,12 @@
           <h3 class="text-center mb-4 text-monospace">Cadastro de uma nova categoria:</h3>
   
           <div class="form-group">
-            <label class="text-monospace" for="texto">Nome da categoria: </label>
-            <select name="tema" id="tema" class="form-control shadow" [(ngModel)]='idCategoria'  (change)='findByIdCategoria()' >
-                <option *ngFor='let item of listaCategoria' value={{item.id}}>
-                    {{item.categoria}}
-                    
-                </option>
-            </select>
+            <label class="text-monospace" for="categoria">Nome da categoria: </label>
+            <input type="text" class="form-control shadow" id="categoria" placeholder="Digite o nome da categoria" [(ngModel)]='categoria.categoria'>
         </div>
         <div class="row mb-5">
           <div class="col-md-12 d-flex justify-content-center">
-            <button class="btn btn-outline-success w-25" (click)='cadastrar()' >Cadastrar</button>
+            <button class="btn btn-outline w-25" (click)='cadastrarCategoria()' >Cadastrar</button>
           </div>
         </div>
   
@@ -37,15 +32,15 @@
           </thead>
           <tbody>
             <tr >
-              <th scope="row"></th>
-              <td></td>
-                <td class="d-flex justify-content-end">
-                  <a class="btn btn-outline-info mr-3">Editar</a>
-                  <a class="btn btn-outline-danger">Apagar</a>
-                </td>
-  
-  
-            </tr>
+
+              <tr *ngFor='let item of listaCategoria'>
+                <th scope="row">{{item.id}}</th>
+                <td>{{item.categoria}}</td>
+                  <td class="d-flex justify-content-end">
+                  <button class="btn btn-outline-info mr-3" [routerLink]="['/editarCategoria', item.id]">Editar</button>
+                   <button class="btn btn-outline-danger"  [routerLink]="['/deleteCategoria', item.id]">Apagar</button>
+                  </td>
+              </tr>
   
           </tbody>
         </table>
@@ -57,26 +52,90 @@
 
 <hr>
 
-    <div class="row mt-2 mb-2">
+      
         <div class="col-md-12">
-          <h3 class="text-center mb-4">Cadastro de um novo produto:</h3>
-          <div class="container">
-            <h2 class="text-right mt-5 mb-3">Produtos</h2>
-            <div class="card-deck">
-                <div class="card mb-5   " *ngFor="let item of listaProdutos ">
-                    <img class="card-img-top" src="../../assets/img/card1.jpg" alt="Imagem de capa do card">
-                    <div class="card-body">
-                        <h5 class="card-title">{{item.nameProduto}}</h5>
-                    <p class="card-text">{{item.descricaoProduto}}</p>      
-                    </div>
-                </div>
-            </div>
+          <h3 class="text-center mb-4 text-monospace">Cadastro de um novo produto:</h3>
+            
+          <div class="form-group">
+            <label class="text-monospace" for="nome">Nome da categoria: </label>
+            <input type="text" class="form-control shadow" id="nome" placeholder="Digite o nome do produto" [(ngModel)]='produtos.nameProduto'>
+          </div>
+          <div class="form-group">
+            <label class="text-monospace" for="quantidade">Quantidade: </label>
+            <input type="text" class="form-control shadow" id="quantidade" placeholder="A quantidade" [(ngModel)]='produtos.quantidadeProduto'>
+          </div>
+          <div class="form-group">
+            <label class="text-monospace" for="preco">Preço: </label>
+            <input type="text" class="form-control shadow" id="preco" placeholder="Digite o preço do produto" [(ngModel)]='produtos.precoProduto'>
+          </div>
+          <div class="form-group">
+            <label for="descricao" class="text-monospace fs-18">Descrição</label>
+            <textarea  id="descricao"  rows="3" class="form-control shadow" placeholder="Digite aqui a descrição" [(ngModel)]='produtos.descricaoProduto'></textarea>
         </div>
-    
+            
+        <div class="row d-flex align-items-end mb-5">
+          <div class="col-md-6">
+              <div class="form-group m-0">
+               <label for="categoria" class="text-monospace">Escolha um categoria</label>
+                <select name="tema" id="tema" class="form-control shadow" [(ngModel)]='idCategoria'  (change)='findByIdCategoria()' >
+                  <option *ngFor='let item of listaCategoria' value={{item.id}}>
+                      {{item.categoria}}
+                      
+                  </option>
+                </select>
+          </div>
+          </div>
+          <div class="col-md-6 d-flex justify-content-end">
+            <button class="btn btn-outline  w-50 " type="button" (click)='cadastrarProdutos()'> Cadastrar</button>
+          </div>
+      </div>
+      
+      <hr>
+  
+        <div class="row mt-5">
+          <div class="col-md-12">
+            <h4 class="text-center text-monospace">Lista de produtos</h4>
+          </div>
+        </div>
+  
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">nome</th>
+              <th scope="col">quantidade</th>
+              <th scope="col">descrição</th>
+              <th scope="col">preço</th>
+              <th scope="col" class="d-flex justify-content-end">Modificações</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr >
+
+              <tr *ngFor='let item of listaProdutos'>
+                <th scope="row">{{item.id}}</th>
+                <td>{{item.nameProduto}}</td>
+                <td>{{item.quantidadeProduto}}</td>
+                <td>{{item.descricaoProduto}}</td>
+                <td>{{item.precoProduto}}</td>
+                  <td class="d-flex justify-content-end">
+                  <button class="btn btn-outline-info mr-3" [routerLink]="['/put-produto', item.id]">Editar</button>
+                   <button class="btn btn-outline-danger"  [routerLink]="['/delete-produto', item.id]">Apagar</button>
+                  </td>
+              </tr>
+  
+          </tbody>
+        </table>
+              
+        </div>
+      
+
         
-    </div>
+       
 
     
 
    
-</div>
+  </div>
+  </div>
+  
