Projeto Longevida | Front-End | Angular

--- a/Longevida/src/app/home/home.component.html
+++ b/Longevida/src/app/home/home.component.html
@@ -26,100 +26,90 @@
     </a>
   </div>
   <div class="jumbotron d-flex justify-content-center align-items-center flex-column" style="background-color: white;">
-      <div class="row mb-3">
-        <img src="https://i.imgur.com/BAQPNYU.png" class="d-block w-100" alt="...">
+      <div class="row mb-1">
+        <img src="../../assets/img/seloshome.jpg" class="d-block w-100" alt="...">
       </div>
-        <h1 class="display-4 font-weight-bold mt-2">MAIS VISTOS</h1>
+        <h1 class="display-4 font-weight-bold mt-2">NOVIDADES</h1>
         <div class="row row-cols-1 row-cols-sm- row-cols-md-4">
             <div class="col m-5"><div class="card" style="width: 18rem;">
-                <img src="../../assets/img/card1.jpg" class="card-img-top" alt="...">
+                <img src="../../assets/img/cabides.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Ferramentas</h5>
-                  <p class="card-text">Está procurando ferramentas? Veja nossos produtos!</p>
-                  <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+                  <h5 class="card-title">Cabides de bambu</h5>
+                  <p class="card-text text-left font-weight-bold">R$ 12.99</p>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
+                   
+                  </div>
                 </div>
               </div></div>
             <div class="col m-5"><div class="card" style="width: 18rem;">
-                <img src="../../assets/img/card2.jpg" class="card-img-top" alt="...">
+                <img src="../../assets/img/Escova_de_dente.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Sementes</h5>
-                  <p class="card-text">Buscando algo para plantar? Veja nossos produtos!</p>
-                  <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+                  <h5 class="card-title">Kit escova dente de bambu</h5>
+                  <p class="card-text text-left font-weight-bold">R$ 35.90</p>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
+                   
+                  </div>
                 </div>
               </div></div>
             <div class="col m-5"><div class="card" style="width: 18rem;">
-                <img src="../../assets/img/card3.jpg" class="card-img-top" alt="...">
+                <img src="../../assets/img/escorredor.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Decoração</h5>
-                  <p class="card-text">Também temos produtos decorativos! Confira já!</p>
-                  <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+                  <h5 class="card-title">Escorredor de bambu</h5>
+                  <p class="card-text text-left font-weight-bold">R$ 19.99</p>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
+                   
+                  </div>
                 </div>
-              </div></div>
+              </div>
+            </div>
            
           </div>
   </div>
   <div class="jumbotron d-flex justify-content-center align-items-center flex-column" style="background-color: white;">
       
-    <h1 class="display-4 font-weight-bold">NOVIDADES</h1>
+    <h1 class="display-4 font-weight-bold">PROMOÇÕES</h1>
     <div class="row row-cols-1 row-cols-sm- row-cols-md-4">
         <div class="col m-5"><div class="card" style="width: 18rem;">
-            <img src="../../assets/img/card1.jpg" class="card-img-top" alt="...">
+            <img src="../../assets/img/kit-talheres.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Ferramentas</h5>
-              <p class="card-text">Está procurando ferramentas? Veja nossos produtos!</p>
-              <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+              <h5 class="card-title">Kit talheres de bambu</h5>
+              <p class="card-text text-left font-weight-bold">  <s>R$ 47.99</s> - R$ 45.99   </p> 
+              <div class="d-flex justify-content-center align-items-center">
+                <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
+               
+              </div>
+              
             </div>
           </div></div>
         <div class="col m-5"><div class="card" style="width: 18rem;">
-            <img src="../../assets/img/card2.jpg" class="card-img-top" alt="...">
+            <img src="../../assets/img/Porta_Talher.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Sementes</h5>
-              <p class="card-text">Buscando algo para plantar? Veja nossos produtos!</p>
-              <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+              <h5 class="card-title">Porta talheres de bambu</h5>
+              <p class="card-text text-left font-weight-bold"> <s>R$28.99</s> - R$ 25.99 </p>
+              <div class="d-flex justify-content-center align-items-center">
+                <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
+               
+              </div>
             </div>
           </div></div>
         <div class="col m-5"><div class="card" style="width: 18rem;">
-            <img src="../../assets/img/card3.jpg" class="card-img-top" alt="...">
+            <img src="../../assets/img/embalagem_sustentavel.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Decoração</h5>
-              <p class="card-text">Também temos produtos decorativos! Confira já!</p>
-              <a routerLink='/produtos' class="btn btn-success">Produtos</a>
+              <h5 class="card-title">Embalagem Sustentável</h5>
+              <p class="card-text text-left font-weight-bold"> <s>R$69.99</s> - R$ 65.00</p>
+              <div class="d-flex justify-content-center align-items-center">
+                <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
+               
+              </div>
             </div>
           </div></div>
        
       </div>
 </div>
-<div class="jumbotron d-flex justify-content-center align-items-center flex-column" style="background-color: white;">
-      
-  <h1 class="display-4 font-weight-bold">PROMOÇÕES</h1>
-  <div class="row row-cols-1 row-cols-sm- row-cols-md-4">
-      <div class="col m-5"><div class="card" style="width: 18rem;">
-          <img src="../../assets/img/card1.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Ferramentas</h5>
-            <p class="card-text">Está procurando ferramentas? Veja nossos produtos!</p>
-            <a routerLink='/produtos' class="btn btn-success">Produtos</a>
-          </div>
-        </div></div>
-      <div class="col m-5"><div class="card" style="width: 18rem;">
-          <img src="../../assets/img/card2.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Sementes</h5>
-            <p class="card-text">Buscando algo para plantar? Veja nossos produtos!</p>
-            <a routerLink='/produtos' class="btn btn-success">Produtos</a>
-          </div>
-        </div></div>
-      <div class="col m-5"><div class="card" style="width: 18rem;">
-          <img src="../../assets/img/card3.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Decoração</h5>
-            <p class="card-text">Também temos produtos decorativos! Confira já!</p>
-            <a routerLink='/produtos' class="btn btn-success">Produtos</a>
-          </div>
-        </div></div>
-     
-    </div>
-</div>
+
        
     <div class="jumbotron d-flex justify-content-center align-items-center flex-column" style="background: rgb(37,102,112);
     background: radial-gradient(circle, rgba(37,102,112,1) 0%, rgba(30,66,94,1) 100%);margin-top: -2%;">
