--- a/Longevida/src/app/categorias/categorias.component.html
+++ b/Longevida/src/app/categorias/categorias.component.html
@@ -1,6 +1,6 @@
 <div class="card border-0" style="width: 18rem;">
     <div class="d-flex justify-content-start">
-      <h1 class="display-4 mt-5 text-left">PRODUTOS</h1>
+      <h1 class="display-4 mt-5 text-left">CATEGORIAS</h1>
     </div>
 
     <div class="card-body">
