--- a/Longevida/src/app/crud-produto/crud-produto.component.html
+++ b/Longevida/src/app/crud-produto/crud-produto.component.html
@@ -25,7 +25,7 @@
         <table class="table table-hover">
           <thead>
             <tr>
-              <th scope="col">#</th>
+              <th scope="col">ID</th>
               <th scope="col">Descrição</th>
               <th scope="col" class="d-flex justify-content-end">Modificações</th>
             </tr>
@@ -98,14 +98,15 @@
           </div>
         </div>
   
-        <table class="table table-hover">
+        <table class="table table-hover text-center">
           <thead>
             <tr>
-              <th scope="col">#</th>
-              <th scope="col">nome</th>
-              <th scope="col">quantidade</th>
-              <th scope="col">descrição</th>
-              <th scope="col">preço</th>
+              <th scope="col">ID</th>
+              <th scope="col" >Nome</th>
+              <th scope="col" >Quantidade</th>
+              <th scope="col" >Descrição</th>
+              <th scope="col" >Preço</th>
+              <th scope="col" >Categoria</th>
               <th scope="col" class="d-flex justify-content-end">Modificações</th>
             </tr>
           </thead>
@@ -118,6 +119,7 @@
                 <td>{{item.quantidadeProduto}}</td>
                 <td>{{item.descricaoProduto}}</td>
                 <td>{{item.precoProduto}}</td>
+                <td>{{item.categoria.categoria}}</td>
                   <td class="d-flex justify-content-end">
                   <button class="btn btn-outline-info mr-3" [routerLink]="['/put-produto', item.id]">Editar</button>
                    <button class="btn btn-outline-danger"  [routerLink]="['/delete-produto', item.id]">Apagar</button>
