Longevida | Crud Completo

--- a/Longevida/src/app/home/home.component.html
+++ b/Longevida/src/app/home/home.component.html
@@ -25,11 +25,11 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <div class="jumbotron d-flex justify-content-center align-items-center flex-column" style="background-color: white;">
+  <div class="container-fluid d-flex justify-content-center align-items-center flex-column mt-5" style="background-color: white;">
       <div class="row mb-1">
         <img src="../../assets/img/seloshome.jpg" class="d-block w-100" alt="...">
       </div>
-        <h1 class="display-4 font-weight-bold mt-2">NOVIDADES</h1>
+        <h1 class="display-4 font-weight-bold mt-5">NOVIDADES</h1>
         <div class="row row-cols-1 row-cols-sm- row-cols-md-4">
             <div class="col m-5"><div class="card" style="width: 18rem;">
                 <img src="../../assets/img/cabides.jpg" class="card-img-top" alt="...">
@@ -68,7 +68,7 @@
            
           </div>
   </div>
-  <div class="jumbotron d-flex justify-content-center align-items-center flex-column" style="background-color: white;">
+  <div class="container-fluid d-flex justify-content-center align-items-center flex-column mb-5" style="background-color: white;">
       
     <h1 class="display-4 font-weight-bold">PROMOÇÕES</h1>
     <div class="row row-cols-1 row-cols-sm- row-cols-md-4">
