--- a/Longevida/src/app/categorias/categorias.component.html
+++ b/Longevida/src/app/categorias/categorias.component.html
@@ -6,7 +6,7 @@
     <div class="card-body">
         <ul class="nav flex-column">
             <li class="nav-item" *ngFor="let item of listaCategoria | orderBy: key : reverse">
-              <a class="nav-link cat" href="#">{{item.categoria}}</a>
+              <p>{{item.categoria}}</p>
             </li>
           </ul>
     </div>
